# GenericUtils

examples/CustomApp/: CustomApp.cpp
examples/LogDefault/: LogDefault.cpp
examples/LogHideSourceInfo/: LogHideSourceInfo.cpp
examples/LogNoSingleton/: LogNoSingleton.cpp
examples/LogSplitLevels/: LogSplitLevels.cpp
examples/LogWithMacros/: LogWithMacros.cpp
examples/LogWithSetters/: LogWithSetters.cpp
include/: CMakeLists.txt  generic.hpp
include/Generic/: container_utils.hpp  filesystem.hpp  iterator_utils.hpp  locale.hpp  log.hpp  lru_cache.hpp  safe_lru_cache.hpp  scope_exit_actions.hpp  stopwatch.hpp
include/generic/: compare.hpp  range.hpp  string_utils.hpp
tests/: CMakeLists.txt  CompareTests.cpp  ContainerUtilsTests.cpp  FileSystemTests.cpp  GenericTests.cpp  IteratorUtilsTests.cpp  LRUCacheTests.cpp  LocaleTests.cpp  LogTests.cpp  RangeTests.cpp  SafeLRUCacheTests.cpp  ScopeExitActionsTests.cpp  StandardTests.cpp  StopwatchTests.cpp  StringUtilsTests.cpp
